// 放置ボーナスユーザー取得レスポンス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

import "user_idle_bonus_structure.proto";

message IdleBonusGetUserResponse {
  repeated UserIdleBonus user_idle_bonuses = 1;
}
